# Neuromuscular-Control

./: .gitignore  LICENSE  README.md  neuralctrl_FitzHugh_Nagumo.py  neuralctrl_Matsuoka.py  plotting_muscles.py  pyproject.toml  run_simulation.py  sensoryfeedback.py  set_arm_environment.py  set_environment.py  tools.py
Data/: initial_data_1.0-60-80.npy
examples/OctopusArmReaching/: actuation_muscles.py  plotting_muscles.py  run_simulation.py  set_arm_environment.py  set_environment.py
neuromuscular_control/: __init__.py  utils.py
neuromuscular_control/feedback_controller/: __init__.py  sensoryfeedback.py
neuromuscular_control/neuron_models/: __init__.py  neuralctrl_FitzHugh_Nagumo.py  neuralctrl_Matsuoka.py
